src/objects/loan__Payment_Schedule_Setup__c.object
<CustomObject>
    <fields>
        <fullName>loan__Lending_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lending Account</label>
        <referenceTo>loan__Loan_Account__c</referenceTo>
        <relationshipLabel>Payment Schedule Setups</relationshipLabel>
        <relationshipName>Payment_Schedule_Setups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Payment_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Term__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Payment Schedule Setup</label>
    <nameField>
        <displayFormat>PSS-{00000000}</displayFormat>
        <label>Payment Schedule Setup Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Schedule Setups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>